--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "jade": "^1.11.0",
     "moment": "^2.29.4",
-    "mongoose": "^6.3.1",
+    "moment-random": "^1.1.0",
+    "mongoose": "^6.7.2",
     "morgan": "~1.9.1",
     "node-fetch": "2"
   },
